# async_fastapi_project

./: .gitignore  Makefile  docker-compose.yaml  pre-commit-config.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 9547645d4403_new_database.py  e1f931ad2cca_database_creation.py
myapplication/: database.py  hasher.py  main.py  models_db.py  settings.py  token_maker.py  user_routes.py
myapplication/api/: models_api.py  user_routes.py
myapplication/api/handler_utils/: login_handler_utils.py  user_handler_utils.py
myapplication/api/handlers/: login_handlers.py  user_handlers.py
myapplication/database/: data_access_layer.py  database.py  models_db.py
tests/: conftest.py  test_handlers.py
tests/migrations/: env.py
tests/migrations/versions/: fa6c4b5f1973_test_migrations.py
tests/test_user_handlers/: details_of_errors.py  test_create_user.py  test_delete_user.py  test_get_user.py  test_update_user.py
