[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = ["Ruslan91111 <ruslan_ru911@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.18"
pydantic = {extras = ["email"], version = "^2.0.2"}
psycopg2-binary = "^2.9.6"
asyncpg = "^0.28.0"
envparse = "^0.2.0"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
pylint = "^2.17.4"
pytest = "7.2.0"
httpx = "0.23.3"
pytest-asyncio = "0.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
